openshift/payment-system1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: payment-system1
  name: payment-system1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment-system1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: payment-system1
    spec:
      containers:
        - name: payment-system1
          image: nlmontes/payment-system1:prod
          imagePullPolicy: Always
          ports:
            - containerPort: 7070
          volumeMounts:
            - name: app-logs-volume
              mountPath: /logs
      restartPolicy: Always
      volumes:
        - name: app-logs-volume
          emptyDir: {}
