openshift/payment-system-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: payment-system
  name: payment-system
spec:
  ports:
    - name: "9090"
      port: 9090
      targetPort: 9090
  selector:
    app: payment-system
status:
  loadBalancer: {}
