openshift/payment-system-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: payment-system
spec:
  host: payment-system-nlmontes14-dev.apps.rm1.0a51.p1.openshiftapps.com
  to:
    kind: Service
    name: payment-system
  port:
    targetPort: 9090
  tls:
    termination: edge
